--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:hint="User name"
+            android:hint="Nombre de usuario (nick)"
             android:ems="10"
             android:id="@+id/edt_user"
             android:backgroundTint="@color/colorPrimary"
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="Password"
+            android:hint="Contraseña"
             android:ems="10"
             android:id="@+id/edt_password"
             android:backgroundTint="@color/colorPrimary"
@@ -45,7 +45,8 @@
             android:id="@+id/btn_login" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
             android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/edt_password"
-            android:background="@drawable/button_rounded" android:onClick="IniciarSesion"/>
+            android:background="@drawable/button_rounded" android:onClick="IniciarSesion"
+            android:textColor="@color/ic_launcher_background"/>
     <Button
             android:text="Registrar"
             android:layout_width="0dp"
@@ -53,7 +54,8 @@
             android:id="@+id/btn_register" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_login"
-            android:background="@drawable/button_rounded_border" android:onClick="Registrar"/>
+            android:background="@drawable/button_rounded_border" android:onClick="Registrar"
+            android:textColor="@color/colorPrimary"/>
     <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
