--- a/app/src/main/res/layout/app_bar_principal_main.xml
+++ b/app/src/main/res/layout/app_bar_principal_main.xml
@@ -21,7 +21,19 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_principal_main" android:id="@+id/include"/>
+   <!-- <include layout="@layout/content_principal_main" android:id="@+id/include"/>-->
+    <android.support.constraint.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:showIn="@layout/app_bar_principal_main"
+            android:id="@+id/contenedor"
+            tools:context=".PrincipalMain" >
+
+    </android.support.constraint.ConstraintLayout>
 
 
 </android.support.design.widget.CoordinatorLayout>
