--- a/app/src/main/res/layout/content_principal_main.xml
+++ b/app/src/main/res/layout/content_principal_main.xml
@@ -7,6 +7,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/app_bar_principal_main"
-        tools:context=".PrincipalMain" android:id="@+id/contenedor">
+        android:id="@+id/contenedor"
+        tools:context=".PrincipalMain" >
 
 </android.support.constraint.ConstraintLayout>
