--- a/app/src/main/res/layout/fragment_fragment_ingresos.xml
+++ b/app/src/main/res/layout/fragment_fragment_ingresos.xml
@@ -5,18 +5,29 @@ xmlns:tools="http://schemas.android.com/tools"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
+android:id="@+id/contenedorIngresos"
 tools:context=".fragments.FragmentIngresos">
 
+
+    <TextView
+            android:text="Listado ingresos"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView5" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp" android:textStyle="bold" android:textSize="18sp"
+            android:textAlignment="center"/>
+
     <include android:layout_width="0dp"
-    android:layout_height="0dp" layout="@layout/ingresos_list"
-    android:layout_marginTop="@dimen/default_spacing"
-    app:layout_constraintTop_toTopOf="parent"
-    android:layout_marginBottom="@dimen/default_spacing"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    android:layout_marginEnd="@dimen/default_spacing"
-    app:layout_constraintStart_toStartOf="parent"
-    android:layout_marginStart="@dimen/default_spacing"/>
+             android:layout_height="0dp" layout="@layout/ingresos_list"
+             android:layout_marginBottom="@dimen/default_spacing"
+             app:layout_constraintBottom_toBottomOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             android:layout_marginEnd="@dimen/default_spacing"
+             app:layout_constraintStart_toStartOf="parent"
+             android:layout_marginStart="@dimen/default_spacing"
+             app:layout_constraintTop_toBottomOf="@+id/textView5"/>
 
     <android.support.design.widget.FloatingActionButton
      android:layout_width="wrap_content"
@@ -28,5 +39,15 @@ tools:context=".fragments.FragmentIngresos">
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="@dimen/default_spacing"
      app:backgroundTint="@color/colorPrimaryDark" android:focusable="true"/>
+
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressIngresos" android:layout_marginTop="64dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:visibility="gone"/>
 
 </android.support.constraint.ConstraintLayout>
