--- a/app/src/main/res/layout/fragment_fragment_ingresos_form.xml
+++ b/app/src/main/res/layout/fragment_fragment_ingresos_form.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
     <android.support.constraint.ConstraintLayout
 
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".RegistroUsuario">
+            tools:context=".fragments.FragmentIngresosForm">
+
+
+        <TextView
+                android:text="Agregar ingresos"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView5" android:layout_marginTop="32dp"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp" android:textStyle="bold" android:textSize="18sp"
+                android:textAlignment="center"/>
 
         <EditText
                 android:layout_width="0dp"
@@ -18,9 +30,9 @@
                 android:ems="10"
                 android:id="@+id/edt_nombre" android:layout_marginEnd="24dp"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:backgroundTint="@color/colorPrimary"/>
+                app:layout_constraintStart_toStartOf="parent"
+                android:backgroundTint="@color/colorPrimary" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView5"/>
         <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -33,7 +45,7 @@
                 android:backgroundTint="@color/colorPrimary"/>
 
 
-        <EditText
+        <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:inputType="date"
@@ -42,18 +54,31 @@
                 android:hint="Fecha del ingreso"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
-                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/edt_cantidad"/>
+                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/edt_cantidad"
+                android:focusable="false"
+
+                android:clickable="true" android:textSize="18sp"/>
 
 
         <Button
                 android:text="Registrar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/btn_registrar"
-                android:background="@drawable/button_rounded" android:onClick="CreaUsuario"
+                android:id="@+id/btn_registrar_ingreso"
+                android:background="@drawable/button_rounded"
                 android:layout_marginStart="24dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
-                app:layout_constraintTop_toBottomOf="@+id/edt_fecha_ingreso"/>
+                app:layout_constraintTop_toBottomOf="@+id/edt_fecha_ingreso"
+                android:textColor="@color/ic_launcher_background"/>
+        <ProgressBar
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressAddIngresos" android:layout_marginTop="32dp"
+                app:layout_constraintTop_toBottomOf="@+id/btn_registrar_ingreso" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:visibility="gone"
+                android:layout_marginStart="8dp"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
