--- a/app/src/main/res/layout/fragment_fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_fragment_inicio.xml
@@ -1,14 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".fragments.FragmentInicio">
+<ScrollView
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:fillViewport="true">
+<android.support.constraint.ConstraintLayout
 
-    <!-- TODO: Update blank fragment layout -->
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".fragments.FragmentInicio">
+
+
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressHome"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone"
+            android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView11"/>
+    <ImageView
+            android:src="@drawable/logo"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:id="@+id/imageView2"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:text="Resumen de movimientos"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:padding="@dimen/default_spacing"
+            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:textSize="14sp"
+            android:background="@color/colorPrimary"
 
-</FrameLayout>
+            android:textAlignment="center" android:textStyle="bold" android:textColor="@color/ic_launcher_background"/>
+    <TextView
+            android:text="$0.00"
+            android:layout_width="120dp"
+            android:layout_height="70dp"
+            android:paddingTop="@dimen/medium_spacing"
+            android:id="@+id/txv_cantidad_ingresos" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" android:textAlignment="center" android:textSize="18sp"
+            android:textColor="@color/colorPrimaryDark" android:textStyle="bold"/>
+    <TextView
+            android:text="$0.00"
+            android:layout_width="120dp"
+            android:layout_height="70dp"
+            android:paddingTop="@dimen/medium_spacing"
+            android:id="@+id/txv_cantidad_gastos" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView6"
+            android:textAlignment="center" android:textStyle="bold" android:textSize="18sp"
+            android:textColor="@color/colorAccent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/txv_diferencia"
+            app:layout_constraintStart_toEndOf="@+id/txv_cantidad_ingresos" android:layout_marginStart="8dp"/>
+    <TextView
+            android:text="Ingresos"
+            android:layout_width="120dp"
+            android:layout_height="20dp"
+            android:id="@+id/textView10"
+            app:layout_constraintTop_toBottomOf="@+id/txv_cantidad_ingresos"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+            android:textColor="@color/colorPrimaryDark" android:textStyle="bold" android:textAlignment="center"/>
+    <TextView
+            android:text="Gastos"
+            android:layout_width="120dp"
+            android:layout_height="20dp"
+            android:id="@+id/textView11"
+            app:layout_constraintTop_toBottomOf="@+id/txv_cantidad_gastos" android:textAlignment="center"
+            android:textColor="@color/colorAccent" android:textStyle="bold" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/txv_leyenda_diferencia"
+            app:layout_constraintStart_toEndOf="@+id/textView10" android:layout_marginStart="8dp"/>
+    <TextView
+            android:text="$0.00"
+            android:layout_width="120dp"
+            android:layout_height="70dp"
+            android:paddingTop="@dimen/medium_spacing"
+            android:id="@+id/txv_diferencia"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp" android:textSize="18sp"
+            android:textAlignment="center" android:textStyle="bold" android:textColor="@color/azul700"
+            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginTop="8dp"/>
+    <TextView
+            android:layout_width="120dp"
+            android:layout_height="20dp"
+            android:id="@+id/txv_leyenda_diferencia"
+            app:layout_constraintTop_toBottomOf="@+id/txv_diferencia" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
+            android:textStyle="bold" android:textAlignment="center"
+            android:text="Diferencia" android:textColor="@color/azul700"
+    />
+</android.support.constraint.ConstraintLayout>
+</ScrollView>
