--- a/app/src/main/res/layout/ingresos_item.xml
+++ b/app/src/main/res/layout/ingresos_item.xml
@@ -1,11 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
-        android:paddingLeft="10dp"
+        android:paddingLeft="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-        android:id="@+id/list_item"
+        android:background="@color/colorFondo"
+        android:id="@+id/ingresos_item"
          android:paddingBottom="2dp">
          <LinearLayout
          android:orientation="vertical"
@@ -13,22 +13,24 @@
          android:layout_height="match_parent"
          android:background="@android:color/white"
          >
+
          <TextView
-         android:id="@+id/txv_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="@tools:sample/lorem"
-         android:padding="@dimen/spacing"
-         android:layout_margin="@dimen/spacing"
-        android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"/>
+                 android:id="@+id/txv_name"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 tools:text="@tools:sample/lorem"
+                 android:padding="@dimen/spacing"
+                 android:layout_margin="@dimen/spacing"
+                 android:background="@color/colorPrimary"
+                 android:textColor="@android:color/white"
+                 android:textStyle="bold"/>
+
              <LinearLayout
                      android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent">
                  <TextView
-                         android:text="TextView"
+                         android:text="Cantidad Inicial"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content" android:id="@+id/textView"
                          android:layout_weight="50"
@@ -36,7 +38,7 @@
                          tools:text="Cantidad Inicial"
                          android:layout_margin="@dimen/spacing"/>
                  <TextView
-                         android:text="TextView"
+                         android:text="Cantidad Actual"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content" android:id="@+id/textView2"
                          tools:text="Cantidad Actual"
