--- a/app/src/main/res/menu/activity_principal_main_drawer.xml
+++ b/app/src/main/res/menu/activity_principal_main_drawer.xml
@@ -4,6 +4,11 @@
       tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+
+        <item
+                android:id="@+id/nav_home"
+                android:icon="@drawable/ic_home_black_24dp"
+                android:title="Inicio"/>
         <item
                 android:id="@+id/nav_ingresos"
                 android:icon="@drawable/ic_attach_money_black_24dp"
@@ -13,22 +18,29 @@
                 android:icon="@drawable/ic_credit_card_black_24dp"
                 android:title="Deudas"/>
 
-        <item
+        <!--<item
                 android:id="@+id/nav_gastos"
                 android:icon="@drawable/ic_money_off_black_24dp"
-                android:title="Gastos"/>
+                android:title="Gastos"/>-->
+
         <item
-                android:id="@+id/nav_manage"
-                android:icon="@drawable/ic_menu_manage"
-                android:title="Tools"/>
+                android:id="@+id/nav_cargos"
+                android:icon="@drawable/ic_money_off_black_24dp"
+                android:title="Cargos"/>
+
+        <item
+                android:id="@+id/nav_abonos"
+                android:icon="@drawable/ic_done_all_black_24dp"
+                android:title="Abonos"/>
+
     </group>
 
     <item android:title="Usuario">
         <menu>
-            <item
-                    android:id="@+id/nav_perfil"
-                    android:icon="@drawable/ic_account_circle_black_24dp"
-                    android:title="Perfil"/>
+            <!--<item
+                    android:id="@+id/nav_password"
+                    android:icon="@drawable/ic_menu_manage"
+                    android:title="Cambio de contraseña"/>-->
             <item
                     android:id="@+id/nav_cerrar_sesion"
                     android:icon="@drawable/ic_menu_close_sesion"
