--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,11 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#E91E63</color>
+
+
+    <color name="colorFondo">#2196F3</color>
+    <color name="colorWarning">#FF9800</color>
 
 
     <!-- Paleta #1 -->
