--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="default_spacing">15dp</dimen>
+    <dimen name="medium_spacing">25dp</dimen>
     <dimen name="spacing">5dp</dimen>
     <dimen name="spacing_small">2dp</dimen>
 </resources>
